Convert HTML/CSS About page with Desktop version

--- a/html/contact.html
+++ b/html/contact.html
@@ -23,7 +23,7 @@
             <div class="navbar">
               <div class="info"><span>(02)9597 6788</span><span>info@patragroup.con.au</span><span>4/450 West Botany Street, Rockdale NSW, 2216</span></div>
               <ul class="menu">
-                <li><a href="">about</a></li>
+                <li><a href="about-us.html">about</a></li>
                 <li class="service-hover"><a href="">services</a>
                   <ul class="sub-menu">
                     <li><a href="stainless-steel-fabrication.html" class="scroll">stainless steel fabrication</a></li>
@@ -122,9 +122,7 @@
         </div>
       </div>
       <div class="contact-page other-page">
-        <div style="background-image: url('images/map-contact.jpg');" class="map-contact"><a href="#"></a>
-          <!--img(src='images/map-contact.jpg')-->
-        </div>
+        <div style="background-image: url('images/map-contact.jpg');" class="map-contact"><a href="#"></a></div>
         <div class="wrapper-contact bg-blue">
           <div class="container">
             <div class="why-choose">
