--- a/html/layout.html
+++ b/html/layout.html
@@ -23,7 +23,7 @@
             <div class="navbar">
               <div class="info"><span>(02)9597 6788</span><span>info@patragroup.con.au</span><span>4/450 West Botany Street, Rockdale NSW, 2216</span></div>
               <ul class="menu">
-                <li><a href="">about</a></li>
+                <li><a href="about-us.html">about</a></li>
                 <li class="service-hover"><a href="">services</a>
                   <ul class="sub-menu">
                     <li><a href="stainless-steel-fabrication.html" class="scroll">stainless steel fabrication</a></li>
