--- a/html/index.html
+++ b/html/index.html
@@ -86,7 +86,17 @@
               </div>
               <div class="box-right col-md-3">
                 <button type="button" class="btn btn-cancel">cancel</button>
-                <button type="button" class="btn btn-upload">upload files</button>
+                <button data-toggle="modal" data-target="#upload-files" type="button" class="btn-upload btn btn-primary btn-lg">upload files</button>
+                <div id="upload-files" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">&times;</span></button>
+                        <div class="title">service one</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 <button type="button" class="btn btn-submit">submit</button>
               </div>
             </div>
