--- a/html/layout.html
+++ b/html/layout.html
@@ -10,6 +10,7 @@
     script(src='js/respond.min.js')
     -->
     <!-- stylesheet-->
+    <link rel="icon" type="image/png" href="images/favicon.ico">
     <link href="scss/bootstrap.min.css" type="text/css" rel="stylesheet">
     <link href="scss/slick.css" type="text/css" rel="stylesheet">
     <link href="scss/style.css" type="text/css" rel="stylesheet">
@@ -43,61 +44,83 @@
           </div>
         </div>
         <form class="box-enquire">
+          <div id="upload-panel">
+            <div class="content-upload-panel"><span class="iconsp-25-delete-black close-panel"></span>
+              <h1 class="title">Upload a files</h1>
+              <div class="form-group">
+                <label><span class="btn btn-black">Choose file</span>
+                  <input type="file" name="fileImage[]">
+                  <input type="text" placeholder="No File Selected" readonly class="form-control show-path-file">
+                </label><span class="iconsp-25-delete-white delete-img-path"></span>
+                <label><span class="btn btn-black">Choose file</span>
+                  <input type="file" name="fileImage[]">
+                  <input type="text" placeholder="No File Selected" readonly class="form-control show-path-file">
+                </label><span class="iconsp-25-delete-white delete-img-path"></span>
+                <label><span class="btn btn-black">Choose file</span>
+                  <input type="file" name="fileImage[]">
+                  <input type="text" placeholder="No File Selected" readonly class="form-control show-path-file">
+                </label><span class="iconsp-25-delete-white delete-img-path"></span>
+                <label><span class="btn btn-black">Choose file</span>
+                  <input type="file" name="fileImage[]">
+                  <input type="text" placeholder="No File Selected" readonly class="form-control show-path-file">
+                </label><span class="iconsp-25-delete-white delete-img-path"></span>
+              </div>
+              <div class="form-group text-center"><a href="javascript:void(0)" class="btn btn-black btn-save">Save</a></div>
+            </div>
+          </div>
           <div class="container">
             <div class="row">
-              <div class="box-left col-md-3">
-                <div class="title">get in touch</div>
-                <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-              </div>
-              <div class="box-center col-md-5">
-                <div class="form-group row">
-                  <div class="col-md-6">
-                    <input type="text" id="usr" placeholder="Name" class="form-control">
-                  </div>
-                  <div class="col-md-6">
-                    <input type="text" id="usr" placeholder="Phone" class="form-control">
-                  </div>
+              <div class="col-md-3">
+                <div class="first-col">
+                  <div class="title">get in touch</div>
+                  <p class="content visible-md visible-lg hidden-*">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
                 </div>
-                <div class="form-group row">
-                  <div class="col-md-6">
-                    <input type="text" id="usr" placeholder="Email" class="form-control">
-                  </div>
-                  <div class="col-md-6">
-                    <div class="select-style">
-                      <select class="size">
-                        <option>Enquire Type</option>
-                        <option>General Enquiry</option>
-                        <option>Quote</option>
-                        <option>Carrers</option>
-                        <option>Other</option>
-                      </select>
+              </div>
+              <div class="col-md-6">
+                <div class="second-col">
+                  <div class="form-group row">
+                    <div class="col-md-6">
+                      <input type="text" id="usr" placeholder="Name" class="form-control">
+                    </div>
+                    <div class="col-md-6">
+                      <input type="text" id="usr" placeholder="Phone" class="form-control">
                     </div>
                   </div>
-                </div>
-                <div class="form-group">
-                  <input type="text" id="usr" placeholder="Site Address" class="form-control">
-                </div>
-                <div class="form-group">
-                  <input type="text" id="usr" placeholder="Company Name" class="form-control">
-                </div>
-                <div class="form-group">
-                  <textarea type="text" id="usr" placeholder="Enquiry" class="form-control"></textarea>
-                </div>
-              </div>
-              <div class="box-right col-md-3">
-                <button type="button" class="btn btn-cancel">cancel</button>
-                <button data-toggle="modal" data-target="#upload-files" type="button" class="btn-upload btn btn-primary btn-lg">upload files</button>
-                <div id="upload-files" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true">&times;</span></button>
-                        <div class="title">service one</div>
+                  <div class="form-group row">
+                    <div class="col-md-6">
+                      <input type="text" id="usr" placeholder="Email" class="form-control">
+                    </div>
+                    <div class="col-md-6">
+                      <div class="select-style">
+                        <select class="size">
+                          <option>Enquire Type</option>
+                          <option>General Enquiry</option>
+                          <option>Quote</option>
+                          <option>Carrers</option>
+                          <option>Other</option>
+                        </select>
                       </div>
                     </div>
                   </div>
+                  <div class="form-group">
+                    <input type="text" id="usr" placeholder="Site Address" class="form-control">
+                  </div>
+                  <div class="form-group">
+                    <input type="text" id="usr" placeholder="Company Name" class="form-control">
+                  </div>
+                  <div class="form-group">
+                    <textarea type="text" id="usr" placeholder="Enquiry" class="form-control"></textarea>
+                  </div>
                 </div>
-                <button type="button" class="btn btn-submit">submit</button>
+              </div>
+              <div class="col-md-3">
+                <div class="last-col">
+                  <button type="button" class="btn btn-cancel">cancel</button>
+                  <button type="button" class="btn-upload btn btn-primary btn-lg">upload files<span class="iconsp-25-check-black check-image"></span></button>
+                  <div class="btn btn-submit">
+                    <input type="submit" value="submit">
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -133,10 +156,10 @@
       </div>
       <div class="footer">
         <div class="container">
-          <ul>
-            <li><i class="iconsp-35-facebook"></i><a href="">Privacy Policy</a></li>
-            <li><span>Copyright © 2014 Patra Group Pty Ltd.</span><span>All rights reserved.</span></li>
-            <li><span>Designed by Openseed</span></li>
+          <ul class="row">
+            <li class="col-md-4"><i class="iconsp-35-facebook"></i><a href="">Privacy Policy</a></li>
+            <li class="col-md-5"><span>Copyright © 2014 Patra Group Pty Ltd. All rights reserved.</span></li>
+            <li class="col-md-3"><span>Designed by Openseed</span></li>
           </ul>
         </div>
       </div>
