--- a/html/services.html
+++ b/html/services.html
@@ -321,7 +321,8 @@
             <div id="accordion" class="panel-group services-list">
               <div class="panel panel-default">
                 <div class="panel-heading">
-                  <h4 class="panel-title sub-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">stainless steel fabrication</a></h4>
+                  <h4 class="panel-title sub-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" class="collapsed">stainless steel fabrication
+                      <div class="traingle"></div></a></h4>
                 </div>
                 <div id="collapseOne" class="panel-collapse collapse">
                   <div class="panel-body">
@@ -557,7 +558,8 @@
               </div>
               <div class="panel panel-default">
                 <div class="panel-heading">
-                  <h4 class="panel-title sub-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">refrigeration</a></h4>
+                  <h4 class="panel-title sub-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" class="collapsed">refrigeration
+                      <div class="traingle"></div></a></h4>
                 </div>
                 <div id="collapseTwo" class="panel-collapse collapse">
                   <div class="panel-body"></div>
@@ -565,7 +567,8 @@
               </div>
               <div class="panel panel-default">
                 <div class="panel-heading">
-                  <h4 class="panel-title sub-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">shopfitting</a></h4>
+                  <h4 class="panel-title sub-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" class="collapsed">shopfitting
+                      <div class="traingle"></div></a></h4>
                 </div>
                 <div id="collapseThree" class="panel-collapse collapse">
                   <div class="panel-body"></div>
@@ -573,7 +576,8 @@
               </div>
               <div class="panel panel-default">
                 <div class="panel-heading">
-                  <h4 class="panel-title sub-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">catering equipment</a></h4>
+                  <h4 class="panel-title sub-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseFour" class="collapsed">catering equipment
+                      <div class="traingle"></div></a></h4>
                 </div>
                 <div id="collapseFour" class="panel-collapse collapse">
                   <div class="panel-body"></div>
@@ -581,7 +585,8 @@
               </div>
               <div class="panel panel-default">
                 <div class="panel-heading">
-                  <h4 class="panel-title sub-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">design & consilation</a></h4>
+                  <h4 class="panel-title sub-title"><a data-toggle="collapse" data-parent="#accordion" href="#collapseFive" class="collapsed">design & consilation
+                      <div class="traingle"></div></a></h4>
                 </div>
                 <div id="collapseFive" class="panel-collapse collapse">
                   <div class="panel-body"></div>
