--- a/html/contact.html
+++ b/html/contact.html
@@ -178,7 +178,7 @@
       <div class="footer">
         <div class="container">
           <ul class="row">
-            <li class="col-md-4"><i class="iconsp-35-facebook"></i><a href="">Privacy Policy</a></li>
+            <li class="col-md-4"><i class="iconsp-35-facebook"></i><a href="http://openseed.com.au/~patragroup/">Privacy Policy</a></li>
             <li class="col-md-5"><span>Copyright © 2014 Patra Group Pty Ltd. All rights reserved.</span></li>
             <li class="col-md-3"><span>Designed by Openseed</span></li>
           </ul>
